@@ -11,6 +11,7 @@
     * Removed m_time file attribute
     * Added restriction for forbidden characters in uploaded file name
     * Added download and basic upload info to link-info page
+    * Added and implemented JSON file with HW limits
 
 0.5.1 (2021-07-16)
     * Implementation of print after upload endpoint
